--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,23 +2,22 @@
 <html lang="en">
     <%- include("partials/head.ejs") %> 
 <body>
-    <h2><%= pokemon.name %> </h2>
+    <h2>EDIT <%= pokemon.name %> </h2>
     <form action ="/pokemon/<%=index%>?_method=PUT " method="post">
         <fieldset>
           <div class="form-group">
-            <label  class="form-label mt-4">EDIT</label>
-            <input type="type" class="form-control" name="name" value="<%= pokemon.name%>" required>
-            <input type="type" class="form-control" name="type" value="<%= pokemon.type%>" required>
-            <input type="number" class="form-control" name="stats[][hp]" value="<%= pokemon.stats.hp%>" required>
-            <input type="number" class="form-control" name="stats[][attack]" value="<%= pokemon.stats.attack%>" required> 
-            <input type="number" class="form-control" name="stats[][defense]" value="<%= pokemon.stats.defense%>" required>   
-            <input type="number" class="form-control" name="stats[][spattack]" value="<%= pokemon.stats.spattack%>" required>   
-            <input type="number" class="form-control" name="stats[][spdefense]" value="<%= pokemon.stats.spdefense%>" required>   
-            <input type="number" class="form-control" name="stats[][speed]" value="<%= pokemon.stats.speed%>" required>   
-            <input type="type" class="form-control" name="misc[][classification]" value="<%= pokemon.misc.classification%>" required>  
-            <input type="url" class="form-control" name="img" value="<%= pokemon.img%>" required>
-            <input type="type" class="form-control" name="misc[][height]" value="<%= pokemon.misc.height%>" required> 
-            <input type="type" class="form-control" name="misc[][weight]" value="<%= pokemon.misc.weight%>" required> 
+            <input type="type" class="form-control" name="name" value="<%= pokemon.name%>" placeholder= "name" required>
+            <input type="type" class="form-control" name="type" value="<%= pokemon.type%>" placeholder= "type"required>
+            <input type="number" class="form-control" name="stats[][hp]" value="<%= pokemon.stats.hp%>" placeholder= "hp stats"required>
+            <input type="number" class="form-control" name="stats[][attack]" value="<%= pokemon.stats.attack%>" placeholder= "attack stats" required> 
+            <input type="number" class="form-control" name="stats[][defense]" value="<%= pokemon.stats.defense%>" placeholder= "defense stats" required>   
+            <input type="number" class="form-control" name="stats[][spattack]" value="<%= pokemon.stats.spattack%>" placeholder= "spattack stats" required>   
+            <input type="number" class="form-control" name="stats[][spdefense]" value="<%= pokemon.stats.spdefense%>" placeholder= "spdefense stats" required>   
+            <input type="number" class="form-control" name="stats[][speed]" value="<%= pokemon.stats.speed%>" placeholder= "speed stats" required>   
+            <input type="type" class="form-control" name="misc[][classification]" value="<%= pokemon.misc.classification%>" placeholder= "clasification" required>  
+            <input type="url" class="form-control" name="img" value="<%= pokemon.img%>" placeholder= "image url" required>
+            <input type="type" class="form-control" name="misc[][height]" value="<%= pokemon.misc.height%>" placeholder= "height" required> 
+            <input type="type" class="form-control" name="misc[][weight]" value="<%= pokemon.misc.weight%>" placeholder= "weight" required> 
           </div>
           <button type="submit" class="btn btn-primary">UPDATE</button>
         </fieldset>
